--- a/web/spotter/view/styles.css
+++ b/web/spotter/view/styles.css
@@ -73,3 +73,12 @@ textarea {
 	margin-bottom: 15px;
 	height: initial;
 }
+
+.error {
+	display: none;
+	padding: 5px;
+	margin: 5px;
+	position: absolute;
+	background-color: #faa;
+	color: #200;
+}
